<resources>

    <!--STORE STRINGS -->
    <string name="app_name">West Cuts Barber Shop</string>
    <string name="shop_product1">Minoxidil</string>
    <string name="shop_product2">Shampoo</string>
    <string name="shop_product3">Tinte</string>
    <string name="shop_product4">Cera</string>
    <string name="description_product1">Frasco con 200 ml</string>
    <string name="description_product2">Frasco con 100ml</string>
    <string name="description_product3">Color fantasía</string>
    <string name="description_product4">Contiene 300g</string>
    <string name="price_product1">100</string>
    <string name="price_product2">200</string>
    <string name="price_product3">80</string>
    <string name="price_product4">250</string>
    <string name="disponibilidad_product1">Disponible en tienda</string>
    <string name="disponibilidad_product2">Disponible en tienda</string>
    <string name="disponibilidad_product3">Producto Agotado</string>
    <string name="disponibilidad_product4">Disponible en tienda</string>

    <!-- BARBERS STRINGS -->
    <string name="name_barber1">Juan Ignacio</string>
    <string name="name_barber2">Ernesto Yair</string>
    <string name="name_barber3">José Israel</string>
    <string name="name_barber4">Luis Alonso</string>
    <string name="days_barber1">Lunes - Sabado</string>
    <string name="days_barber2">Martes - Domingo</string>
    <string name="days_barber3">Martes-Domingo</string>
    <string name="days_barber4">Lunes- Sabado</string>
    <string name="hours_barber">11:00am - 8:00 pm</string>


    <string name="bienvenidos">Bienvenidos a Barbershop</string>
    <string name="msj_informacion">Esta aplicación es para:</string>
    <string name="part1">+ Conocer nuestros servicios </string>
    <string name="part2">+ Agendar cita para corte </string>

    <string name="Citas">Agenda tu servicio</string>
    <string name="nombre">Nombre</string>
    <string name="hora">Horario</string>
    <string name="Fecha">Fecha</string>
    <string name="sucursal">Elige un barbero</string>
    <string name="Aceptar">Agendar</string>
    <string name="total">Total: $</string>

    <string name="servicios">Servicios</string>
    <string name="corteNormal">Corte normal</string>
    <string name="corteUrbano">Corte urbano</string>
    <string name="corteFiguras">Figuras</string>
    <string name="barba">Barba</string>
    <string name="mascarrillas">Mascarrillas</string>
    <string name="venta">Venta de ceras</string>
    <string name="tel">Telefono: </string>

    <string-array name="opciones">
        <item>Juan Ignacio</item>
        <item>Ernesto Yair</item>
        <item>José Israel</item>
        <item>Luis Alonso</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>